--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,18 @@ code {
   margin-top: 30px;
   padding-top: 15px;
 }
+
+.editor-app {
+  /* margin: 100px; */
+  padding: 200px;
+  background-color: #6d6d6d;
+  color: #cccccc;
+}
+
+input[type="number"] {
+  margin: 0px 0px 0px 20px;
+  border-radius: 5px;
+  max-width: 50px;
+  min-height: 25px;
+  text-align: center;
+}
